<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_scrollview">Scrollview Test</string>
    <string name="title_activity_drag_drop">Drag &amp; Drop Test</string>
    <string name="title_activity_animation">Animation Test</string>
    <string name="title_activity_canvas">Canvas Test</string>
    <string name="title_example_detail">Example Detail</string>
    <string name="scrollview_test">Scrollview Test</string>
    <string name="drag_amp_drop_test">Drag &amp; Drop Test</string>
    <string name="animation_test">Animation Test</string>
    <string name="canvas_test">Canvas Test</string>
    <string name="triangle_view">OTHER</string>
    <string name="col_one">ONE</string>
    <string name="col_two">TWO</string>
    <string name="col_three">THREE</string>
    <string name="droid">droid</string>
    <string name="start">Start</string>

</resources>