<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnScrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/scrollview_test"
        android:onClick="launchScrollviewTest" />

    <Button
        android:id="@+id/btnDragDrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnScrollview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/drag_amp_drop_test"
        android:onClick="launchDragDropTest" />

    <Button
        android:id="@+id/btnAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDragDrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/animation_test"
        android:onClick="launchAnimationTest" />
    
    <Button
        android:id="@+id/btnCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAnimation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/canvas_test"
        android:onClick="launchCanvasTest" />

</RelativeLayout>